// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`environments should match Development 1`] = `
{
  "debug": true,
  "name": "Development",
  "networks": [
    "Local",
    "Playground",
    "TestNet",
    "MainNet",
  ],
}
`;

exports[`environments should match Preview 1`] = `
{
  "debug": true,
  "name": "Preview",
  "networks": [
    "Playground",
    "TestNet",
    "MainNet",
  ],
}
`;

exports[`environments should match Production 1`] = `
{
  "debug": false,
  "name": "Production",
  "networks": [
    "MainNet",
    "TestNet",
    "Playground",
  ],
}
`;
